[gd_scene load_steps=10 format=3 uid="uid://bpbsx078wocty"]

[ext_resource type="Script" path="res://Scripts/Editor.gd" id="1_32imw"]
[ext_resource type="Script" path="res://Scripts/GraphVisualizer.gd" id="1_lv1lg"]
[ext_resource type="PackedScene" uid="uid://bsxbb0ccvpx8u" path="res://Scenes/GraphControlPoint.tscn" id="2_8a8t4"]
[ext_resource type="PackedScene" uid="uid://2m5l61gf471j" path="res://Scenes/GraphItem.tscn" id="2_k3sde"]
[ext_resource type="Script" path="res://Scripts/ViewController.gd" id="3_1qmvv"]
[ext_resource type="PackedScene" uid="uid://bls1xbvvuh4cn" path="res://Scenes/Axis.tscn" id="3_2nxg0"]
[ext_resource type="Script" path="res://Scripts/Grid.gd" id="4_j68ae"]
[ext_resource type="Script" path="res://Scripts/ItemListBase.gd" id="7_gfjl3"]
[ext_resource type="PackedScene" uid="uid://snu6npgdhy3" path="res://Scenes/GraphsPreview.tscn" id="9_7eiox"]

[node name="Editor" type="Node2D" node_paths=PackedStringArray("open_dialog", "save_dialog")]
script = ExtResource("1_32imw")
graph_item_scene = ExtResource("2_k3sde")
open_dialog = NodePath("OpenDialog")
save_dialog = NodePath("SaveDialog")

[node name="Axis" parent="." instance=ExtResource("3_2nxg0")]

[node name="Grid" type="Node2D" parent="."]
z_index = -1
script = ExtResource("4_j68ae")
position_vector = Vector2(200, 200)
verticalColor = Color(0.768627, 0.32549, 0.0627451, 1)
horizontalColor = Color(0.333333, 0.588235, 0.556863, 1)

[node name="GraphCamera" type="Camera2D" parent="."]
script = ExtResource("3_1qmvv")

[node name="GraphVisualizer" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("1_lv1lg")
control_point_scene = ExtResource("2_8a8t4")

[node name="UI" type="CanvasLayer" parent="."]

[node name="LineEdit" type="LineEdit" parent="UI"]
anchors_preset = -1
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
size_flags_horizontal = 8
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="UI"]
anchors_preset = -1
anchor_right = 0.2
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="SideBar" type="VBoxContainer" parent="UI/PanelContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Header" type="HBoxContainer" parent="UI/PanelContainer/SideBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="AddGraph" type="Button" parent="UI/PanelContainer/SideBar/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add"

[node name="RemoveGraph" type="Button" parent="UI/PanelContainer/SideBar/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Remove
"

[node name="GraphItems" type="VSplitContainer" parent="UI/PanelContainer/SideBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GraphsListContainer" type="ScrollContainer" parent="UI/PanelContainer/SideBar/GraphItems"]
layout_mode = 2
size_flags_vertical = 3

[node name="GraphsList" type="VBoxContainer" parent="UI/PanelContainer/SideBar/GraphItems/GraphsListContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("7_gfjl3")
item_group = "Item"

[node name="GraphsPreviewContainer" type="ScrollContainer" parent="UI/PanelContainer/SideBar/GraphItems"]
layout_mode = 2
size_flags_vertical = 3

[node name="GraphsPreview" parent="UI/PanelContainer/SideBar/GraphItems/GraphsPreviewContainer" instance=ExtResource("9_7eiox")]
unique_name_in_owner = true
layout_mode = 2

[node name="OpenDialog" type="NativeFileDialog" parent="."]
title = "Open a graph"
file_mode = 0

[node name="SaveDialog" type="NativeFileDialog" parent="."]
title = "Save a graph"

[connection signal="pressed" from="UI/PanelContainer/SideBar/Header/AddGraph" to="." method="add_graph"]
[connection signal="pressed" from="UI/PanelContainer/SideBar/Header/RemoveGraph" to="." method="remove_graph"]
[connection signal="file_selected" from="OpenDialog" to="." method="load_graph"]
[connection signal="file_selected" from="SaveDialog" to="." method="save_graph"]
